refactor: prefer use StandardsCharset instead of String value.