@@ -1,7 +1,7 @@
 package br.com.marcoshssilva.ecommerce.resources.utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -15,10 +15,6 @@ public class URL {
         
         
         public static String decodeParam(String r) {
-            try {
-                return URLDecoder.decode(r, "utf-8");
-            } catch (UnsupportedEncodingException ex) {
-                return "";
-            }
+            return URLDecoder.decode(r, StandardCharsets.UTF_8);
         }
 }
